src/components/PuzzleList/PuzzleList.css
.PuzzleList h2 {
  text-align: center;
  margin: 10px;
  padding: 10px;
  box-shadow: 0 2px 4px #2a728f;
}

.Puzzles {
  padding: 0;
  margin: 0;
  display: block;
}

.Puzzle {
  display: flex;
  text-decoration: none;
  width: calc(100% - 20px);
  padding: 8px;
  margin: 10px;
  box-sizing: border-box;
  box-shadow: 0 2px 4px #2a728f;
  color: #2a728f;
  background-color: #fff;
  transition: border 0.2s ease-out;
}

.Puzzle:focus {
  outline: none;
  border: 2px ridge #2a728f;
}

.Preview {
  width: 150px;
  margin-right: 10px;
  display: inline-block;
}

.DetailsContainer {
  display: flex;
  flex-flow: column;
  flex-basis: 50%;
  flex-grow: 1;
}

.Details {
  flex-basis: 50%;
  flex-grow: 1;
}

.PlayButton {
  flex-basis: 3rem;
  font-size: 1.5rem;
  background-color: #2a728f;
  color: #fff;
  border: none;
  box-shadow: 2px 2px 5px #2a728f;
  text-align: center;
  padding: 0.5rem;
}

.PlayButton:focus {
  outline: 4px solid rgb(178, 226, 255, 0.6);
}

